src/tests/snapshots/amber__tests__compiling__ifchain_dynamic_then_constant_true.ab__zsh.snap
---
source: src/tests/compiling.rs
expression: ast
---
# Output
# Succeeded
typeset -r args_0=("$0" "$@")
: "${args_0[@]}"
echo "Succeeded"
